Fix icons on safari

--- a/themes/rogemus/assets/css/_base.css
+++ b/themes/rogemus/assets/css/_base.css
@@ -50,7 +50,6 @@ h4 {
   padding: 0;
   margin: 0;
   font-weight: var(--font-w-semibold);
-  margin-bottom: var(--space-100);
   font-family: var(--font-f-inter);
   margin-bottom: var(--space-200);
   transform: skewX(-10deg);
